--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <div id="console"></div> 
     
     </script>
+  
+    <audio src="mr_robot.mp3" autoplay>
+      <p>If you are reading this, it is because your browser does not support the audio element.     </p>
+      <embed src="mr_robot.mp3" width="180" height="90" hidden="true" />
+    </audio>
+  
+  
   </body> 
 </html> 
